--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ruff Spots</title>
+
   <!-- Material Icon CDN -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <!-- Materialize CSS CDN -->
@@ -14,20 +14,12 @@
   <link rel="stylesheet" href="css/style.css">
   <!--  google fonts -->
   <link href="https://fonts.googleapis.com/css?family=Roboto|Special+Elite" rel="stylesheet">
-
-
+  <!--Import jQuery before materialize.js-->
+  <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   <!-- Compiled and minified JavaScript -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
 
-
-  <!--Import jQuery before materialize.js-->
-  <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-  <script type="text/javascript" src="js/materialize.min.js"></script>
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
-  <!-- Materialize Icons -->
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <title>Ruff Spots</title>
 </head>
 
 <body id="geolocate">
@@ -40,16 +32,9 @@
             <i class="material-icons">menu</i>
           </a>
           <ul class="right hide-on-med-and-down">
-            <li>
-              <a href="index.html">Home</a>
-            </li>
-
-            <li>
-              <a href="search.html">Search</a>
-            </li>
-            <li>
-              <a href="search.html">Submit</a>
-            </li>
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="search.html">SEARCH</a></li>
+            <li><a href="search.html">SUBMIT</a></li>
           </ul>
           <ul class="side-nav" id="mobile-menu">
             <li>
@@ -57,71 +42,29 @@
                 <div class="background">
                   <img src="http://lorempixel.com/output/abstract-q-c-640-480-10.jpg" alt="Background Sidenav">
                 </div>
-                <a href="#!user">
-                  <img class="circle" src="http://lorempixel.com/output/people-q-c-640-480-9.jpg" alt="User Image Sidenav">
-                </a>
-                <a href="#!name">
-                  <span class="white-text name">John Doe</span>
-                </a>
-                <a href="#!email">
-                  <span class="white-text email">jdandturk@gmail.com</span>
-                </a>
               </div>
             </li>
-            <li>
-              <a href="index.html">Home</a>
-            </li>
-
-            <li>
-              <a href="search.html">Search</a>
-            </li>
-            <li>
-              <a href="search.html">Submit</a>
-            </li>
+            <li><a href="index.html">HOME</a></li>
+             <li><a href="search.html">SEARCH</a></li>
+            <li><a href="search.html">SUBMIT</a></li>
           </ul>
         </div>
       </div>
     </nav>
   </header>
   <main>
-    <!-- Your content here -->
-    <div class="row center-align headIMG">
-      <div class="col s12"></div>
-      <!-- <h2 class="logo center-align">RUFF SPOTS</h2> -->
 
-
+    <div class="parallax-container">
+      <div class="parallax headIMG">
+        <img class="headIMG" src="img/dogheader1.jpg">
+      </div>
       <div class="row">
-        <div class="col s12 m8 offset-m2">
-          <div class="col m9 s4">
-            <div class="tagline">Find Local Spots To Bring Your Four Legged Friend.</div>
-            <!-- <h3 class="header center-align">Find Local Places To Bring Your Four Legged Friend.</h3> -->
-          </div>
-          <!-- <div class="card">
-          <div class="card-image">
-            <img src="img/sample1.jpg">
-          <span class="card-title">Woof Woof</span>
-          </div>
-          <div class="card-stacked">
-            <div class="card-content">
-              <p>It’s Saturday, You have the day off… And you’re looking for something to do; alone or with your significant
-                other, a friend, a sibling, parents, maybe you’re even accompanied by a child of your own, but either way…
-                you’re looking for something to do, get out of the house, enjoy yourself… and as you ponder where you’re
-                going to go and what you’re going to do… you feel that familiar consistent thud on the floor, followed by
-                panting and wagging… and you remember the final member to your troop, your four-legged furry friend. Now,
-                that changes everything. You have to completely reconsider your original options. Balancing out daylight
-                with in door activities for everyone. You’ve tried google and yelp, but no reliable source is available for
-                finding a place for you and your pup to prance… leaving your in a rough spot... Ruff Spots allows you to
-                have a great dog friendly day!
-              </p>
-            </div>
-            <div class="card-action">
-              <a href="#">This is a link</a>
-            </div>
-          </div>
-        </div> -->
+        <div class="col s12 m6 offset-m2">
+          <div class="tagline">Find Local Spots To Bring Your Four Legged Friend.</div>
         </div>
       </div>
     </div>
+
 
 
     <div class="row center-align">
@@ -134,40 +77,42 @@
 
       </div>
 
-      <div class="col s4">
+      <div class="col s12 m4">
         <h3>Ruff Spots Near Me</h3>
-        <div class="rows">
-          <!-- <div class="col s8"> -->
-          <form id="typeOfPlace">
-            <div class="input-field">
-              <select class="icons nearsearch">
-                <option value="park" data-icon="img/park.png" class="circle">Parks</option>
-                <option value="food" data-icon="img/restaurant.png" class="circle">Restaurants</option>
-                <option value="natural feature" data-icon="img/hiking.png" class="circle">Hiking</option>
-                <option value="cafe" data-icon="img/cafe.png" class="circle">Cafes</option>
-                <option value="store" data-icon="img/shopping-cart.png" class="circle">Shopping</option>
-                <option value="bar" data-icon="img/bar.png" class="circle">Bars</option>
-              </select>
+        <!-- <div class="rows"> -->
+          <!-- <div class="col s12"> -->
+            <form id="typeOfPlace">
+              <div class="input-field brown-text brown-darken-2">
+                <select class="icons nearsearch">
+                  <option value="park" data-icon="img/park.png" class="circle">Parks</option>
+                  <option value="food" data-icon="img/restaurant.png" class="circle">Restaurants</option>
+                  <option value="natural feature" data-icon="img/hiking.png" class="circle">Hiking</option>
+                  <option value="cafe" data-icon="img/cafe.png" class="circle">Cafes</option>
+                  <option value="store" data-icon="img/shopping-cart.png" class="circle">Shopping</option>
+                  <option value="bar" data-icon="img/bar.png" class="circle">Bars</option>
+                </select>
 
 
-              <!-- <div class="col s4"> -->
-              <button class="btn waves-effect waves-light" name="action" id="localSubmit" type="submit" value="Submit">Submit!
-                <i class="material-icons right">send</i>
-              </button>
+                <!-- <div class="col s4 m2"> -->
+                <button class="btn waves-effect waves-light" name="action" id="localSubmit" type="submit" value="Submit">Submit!
+                  <i class="material-icons right">send</i>
+                </button>
+
               <!-- </div> -->
-              <!-- </div> -->
-            </div>
+          </div>
           </form>
 
-        </div>
+        <!-- </div> -->
       </div>
-      <div class="col s4">
-        <h3>Submit Your Spot</h3>
-        <a class="btn-floating btn-large waves-effect waves-light btn" href="search.html">
-          <i class="material-icons">add</i>
-        </a>
-        <!-- <a class="waves-effect waves-light btn modal-trigger" href="#modal1">Add A Ruff Spot</a> -->
-      </div>
+    
+
+    <div class="col s4">
+      <h3>Submit Your Spot</h3>
+      <a class="btn-floating btn-large waves-effect waves-light btn" href="search.html">
+        <i class="material-icons">add</i>
+      </a>
+      <!-- <a class="waves-effect waves-light btn modal-trigger" href="#modal1">Add A Ruff Spot</a> -->
+    </div>
     </div>
     </div>
 
@@ -179,16 +124,11 @@
     </div>
 
   </footer>
-  <!-- jQuery CDN -->
-  <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-    crossorigin="anonymous"></script>
-  <!-- Materialize JS CDN -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
 
 
   <script src="js/index.js" type="text/javascript"></script>
-
+  <script src="js/search.js" type="text/javascript"></script>
 </body>
-<script src="js/search.js" type="text/javascript"></script>
+
 
 </html>
