--- a/public/result.html
+++ b/public/result.html
@@ -24,18 +24,65 @@
 
 <body>
 
-    <nav class="brown lighten-2">
-        <div class="nav-wrapper">
-            <div class="container">
-                <a href="index.html" class="brand-logo">RUFF SPOTS</a>
-            </div>
-        </div>
+        <header>
+                <nav class="brown lighten-2">
+                    <div class="nav-wrapper">
+                        <div class="container">
+                            <a href="index.html" class="brand-logo">RUFF SPOTS</a>
+                            <a href="#" data-activates="mobile-menu" class="button-collapse">
+                                <i class="material-icons">menu</i>
+                            </a>
+                            <ul class="right hide-on-med-and-down">
+                                <li>
+                                    <a href="index.html">HOME</a>
+                                </li>
+                                <li>
+                                    <a href="search.html">SEARCH</a>
+                                </li>
+                                <li>
+                                    <a href="search.html">SUBMIT</a>
+                                </li>
+                            </ul>
+                            <ul class="side-nav" id="mobile-menu">
+                                <li>
+                                    <div class="userView">
+                                        <div class="background">
+                                            <img src="http://lorempixel.com/output/abstract-q-c-640-480-10.jpg" alt="Background Sidenav">
+                                        </div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <a href="index.html">HOME</a>
+                                </li>
+                                <li>
+                                    <a href="search.html">SEARCH</a>
+                                </li>
+                                <li>
+                                    <a href="search.html">SUBMIT</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </nav>
+            </header>
+            <main>
+        
+                <div class="row center-align searchIMG">
+                    <div class="col s12"></div>
+                    <div class="row">
+                        <div class="col s12 m6 offset-m2">
+        
+                            <div class="tagline">Add A Spot!</div>
+                        </div>
+                    </div>
+                </div>
+                </div>
+                <div class="container center-align">
 
-    <div class="container">
         <div class="row">
             <div id="places">
-                <h2 id="search-results">Search Results</h2>
-                <p>Select a place to add it</p>
+                <h3 id="search-results">No Ruff Spots have been found, but these places might be Ruff Friendly.</h3>
+                <h5>Would you like to add a Ruff Spot?</h5>
                 <!--5 Results will be appended here-->
             </div>
         </div>
