--- a/public/search.html
+++ b/public/search.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ruff Spots</title>
+
     <!-- Material Icon CDN -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- Materialize CSS CDN -->
@@ -14,25 +14,15 @@
     <link rel="stylesheet" href="css/style.css">
     <!--  google fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto|Special+Elite" rel="stylesheet">
-
-
+    <!--Import jQuery before materialize.js-->
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
 
-
-    <!--Import jQuery before materialize.js-->
-    <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <script type="text/javascript" src="js/materialize.min.js"></script>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
-    <!-- Materialize Icons -->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
-    <title>Ruff Spot | Search</title>
+    <title>Ruff Spots Search</title>
 </head>
 
-<body>
+<body id="geolocate">
     <header>
         <nav class="brown lighten-2">
             <div class="nav-wrapper">
@@ -43,14 +33,13 @@
                     </a>
                     <ul class="right hide-on-med-and-down">
                         <li>
-                            <a href="index.html">Home</a>
-                        </li>
-
-                        <li>
-                            <a href="search.html">Search</a>
+                            <a href="index.html">HOME</a>
                         </li>
                         <li>
-                            <a href="search.html">Submit</a>
+                            <a href="search.html">SEARCH</a>
+                        </li>
+                        <li>
+                            <a href="search.html">SUBMIT</a>
                         </li>
                     </ul>
                     <ul class="side-nav" id="mobile-menu">
@@ -59,26 +48,16 @@
                                 <div class="background">
                                     <img src="http://lorempixel.com/output/abstract-q-c-640-480-10.jpg" alt="Background Sidenav">
                                 </div>
-                                <a href="#!user">
-                                    <img class="circle" src="http://lorempixel.com/output/people-q-c-640-480-9.jpg" alt="User Image Sidenav">
-                                </a>
-                                <a href="#!name">
-                                    <span class="white-text name">John Doe</span>
-                                </a>
-                                <a href="#!email">
-                                    <span class="white-text email">jdandturk@gmail.com</span>
-                                </a>
                             </div>
                         </li>
                         <li>
-                            <a href="index.html">Home</a>
-                        </li>
-
-                        <li>
-                            <a href="search.html">Search</a>
+                            <a href="index.html">HOME</a>
                         </li>
                         <li>
-                            <a href="search.html">Submit</a>
+                            <a href="search.html">SEARCH</a>
+                        </li>
+                        <li>
+                            <a href="search.html">SUBMIT</a>
                         </li>
                     </ul>
                 </div>
@@ -87,23 +66,18 @@
     </header>
     <main>
 
-        <!-- Your content here -->
         <div class="row center-align searchIMG">
             <div class="col s12"></div>
-            <!-- <h2 class="logo center-align">RUFF SPOTS</h2> -->
-
-
             <div class="row">
-                <div class="col s12 m8 offset-m2">
-                    <div class="col m9 s4">
-                        <div class="tagline">Seach For A Spot</div>
-                        <!-- <h3 class="header center-align">Find Local Places To Bring Your Four Legged Friend.</h3> -->
-                    </div>
+                <div class="col s12 m6 offset-m2">
+
+                    <div class="tagline">Search For A Spot</div>
                 </div>
             </div>
         </div>
+        </div>
         <div class="container center-align">
-
+            <h3>Enter your zip code and a place to sniff out a Ruff Spot!</h3>
             <form id="searchForm">
 
                 <div class="row">
@@ -128,27 +102,16 @@
                     </form>
 
                 </div>
-
-                <!-- <label>Where?
-                <input id="input-zipCode" placeholder="your zip code" value="">
-            </label>
-
-
-            <label>What?
-                <input id="input-place" placeholder="add your place" value="">
-            </label> -->
-
-                <!-- <button id="btn-place" type="submit" value="Submit">Submit!</button> -->
         </div>
     </main>
     <footer class="page-footer brown lighten-2">
         <div class="container">
             <p class="grey-text text-lighten-4"> © 2018 - Ruff Spots</p>
-            <!-- <a class="grey-text text-lighten-4 right" href="#!">More Links</a> -->
         </div>
 
     </footer>
+    <script src="js/search.js" type="text/javascript"></script>
 </body>
-<script src="js/search.js" type="text/javascript"></script>
+
 
 </html>
